# pubs-extract

./: .gitignore  .woodpecker.yml  CHANGELOG.md  README.md  pyproject.toml
extract/: annotation.py  extract.py
pubs/plugs/extract/: annotation.py  extract.py
tools/: extract-changelog.py
