[tool.poetry]
name = "pubs-extract"
version = "0.1.0"
description = "A pdf annotation extraction plugin for pubs bibliography manager"
authors = ["Marty Oehme <marty.oehme@gmail.com>"]
license = "LGPL-3.0"
readme = "README.md"
packages = [{include = "extract"}]

[tool.poetry.dependencies]
python = "^3.10"
pymupdf = "^1.21.1"

[tool.poetry.group.dev.dependencies]
pubs = "^0.9.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
